<resources>
    <string name="app_name">MessengerApp</string>

    <!-- fragment my profile strings -->

    <string name="fragment_my_profile_name">Profile</string>
    <string name="settings">Settings</string>
    <string name="name_surname">Name Surname</string>
    <string name="career">Career</string>
    <string name="home_address">Home address</string>
    <string name="go_to_settings_and_fill_out_the_profile">Go to settings and fill out the profile</string>
    <string name="edit_profile">Edit profile</string>
    <string name="view_my_contacts">View my contacts</string>
    <string name="facebook_icon">facebook_icon</string>
    <string name="linkedin_icon">linkedin_icon</string>
    <string name="instagram_icon">instagram_icon</string>

    <!-- fragment login strings -->

    <string name="hello">Hello!</string>
    <string name="enter_your_email_and_password_below">Enter your email and password below</string>
    <string name="sign_up">Sign up</string>
    <string name="don_t_have_account">Don’t have account?</string>

    <!-- fragment auth strings -->

    <string name="let_s_get_acquainted">Let\'s get acquainted</string>
    <string name="fill_out_the_profile_and_go_to_the_application">Fill out the profile and go to the application!</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="google">Google</string>
    <string name="remember_me">Remember me</string>
    <string name="register">Register</string>
    <string name="or">or</string>
    <string name="terms_text_portrait">By clicking Register you agree to our Terms\nand Conditions</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign in</string>

    <!-- Validation email and password -->
    <string name="dont_use_spaces">Don\'t use spaces</string>
    <string name="min_length_password">Minimum %d character password</string>
    <string name="contain_upper_case_chars">Must contain upper-case characters</string>
    <string name="contain_digit_chars">Must contain number characters</string>
    <string name="invalid_email_address">Invalid Email Address</string>
    <string name="invalid_password">Invalid password</string>

    <!-- Snackbar message -->
    <string name="message_delete">Contact has been deleted</string>
    <string name="message_add_contact">Contact has been added</string>
    <string name="snackbar_action">undo</string>

    <!-- Fragment my contacts and dialog add contact -->

    <string name="fragment_my_contacts_name">Contacts</string>
    <string name="add_contacts">Add contacts</string>
    <string name="contacts">Contacts</string>

    <string name="add_contact">Add contact</string>
    <string name="save">Save</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="profile">Profile</string>
    <string name="message">message</string>
    <string name="fragment_my_profile_logout">Logout</string>
    <string name="get_contacts">Get contacts</string>
    <string name="forgot_your_password">Forgot your password?</string>

</resources>