<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="?attr/colorPrimary"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.authentication.login.LoginFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/content_start"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/content_end"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/content_top"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.03" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/content_bottom"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.97" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/content_main_start"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_view_hello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello"
        android:textColor="@color/label_text_color"
        style="@style/open_sans_font"
        android:textSize="@dimen/fragment_login_title_text_size"
        android:layout_marginBottom="@dimen/margin_small"

        app:layout_constraintTop_toTopOf="@id/content_main_start"
        app:layout_constraintStart_toStartOf="@id/content_start"
        app:layout_constraintEnd_toEndOf="@id/content_end"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_view_enter_email_and_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_email_and_password_below"
        android:textColor="@color/label_secondary_text_color"
        android:textSize="@dimen/fragment_login_text_size_medium"
        style="@style/open_sans_font"

        app:layout_constraintTop_toBottomOf="@id/text_view_hello"
        app:layout_constraintBottom_toTopOf="@id/flow_data_containers"
        app:layout_constraintStart_toStartOf="@id/content_start"
        app:layout_constraintEnd_toEndOf="@id/content_end"/>

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/flow_data_containers"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="container_email, container_password, flow_helpers"
        android:orientation="vertical"
        app:flow_verticalStyle="packed"
        android:layout_marginTop="@dimen/margin_medium"

        app:layout_constraintTop_toBottomOf="@id/text_view_enter_email_and_pass"
        app:layout_constraintStart_toStartOf="@id/content_start"
        app:layout_constraintEnd_toEndOf="@id/content_end"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/container_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/TextInputLayout"
        android:theme="@style/TextColorAuthFragment"
        android:hint="@string/email"

        app:errorEnabled="true"
        app:helperTextTextColor="@color/text_input_layout_error_msg_color">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:lines="1"
            android:textColor="@color/text_input_edit_text_text_color" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/container_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/TextInputLayout"
        android:theme="@style/TextColorAuthFragment"

        android:hint="@string/password"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:lines="1"
            android:maxLength="16"
            android:textColor="@color/text_input_edit_text_text_color" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/flow_helpers"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="checkbox_remember_me, text_view_forgot_password"
        android:orientation="horizontal"
        app:flow_verticalStyle="packed"

        app:layout_constraintTop_toBottomOf="@id/flow_data_containers"
        app:layout_constraintStart_toStartOf="@id/content_start"
        app:layout_constraintEnd_toEndOf="@id/content_end"
        />

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/checkbox_remember_me"
        android:textAppearance="@style/open_sans_font"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:buttonTint="@color/label_text_color"
        android:text="@string/remember_me"
        android:textColor="@color/label_secondary_text_color"
        android:textSize="@dimen/fragment_login_text_size_big"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_view_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_your_password"
        android:textColor="@color/label_text_color"
        android:textSize="@dimen/fragment_login_text_size_big"
        style="@style/open_sans_font"
        android:layout_marginBottom="@dimen/margin_small"

        app:layout_constraintEnd_toEndOf="@id/content_end"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_login"
        android:gravity="center"
        android:layout_marginBottom="@dimen/margin_medium"

        android:textAppearance="@style/open_sans_font"
        android:text="@string/register"
        android:textAllCaps="true"
        android:textColor="@color/label_text_color"
        android:textSize="@dimen/fragment_auth_button_text_size"

        app:layout_constraintBottom_toTopOf="@id/flow_text_views_sign_up"
        app:layout_constraintStart_toStartOf="@id/content_start"
        app:layout_constraintEnd_toEndOf="@id/content_end"
        />

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/flow_text_views_sign_up"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="text_view_have_acc, text_view_sign_in"
        android:orientation="horizontal"
        app:flow_horizontalStyle="packed"
        app:flow_horizontalGap="@dimen/fragment_auth_sign_in_texts_gap"

        app:layout_constraintStart_toStartOf="@id/content_start"
        app:layout_constraintEnd_toEndOf="@id/content_end"
        app:layout_constraintBottom_toBottomOf="@id/content_bottom"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_view_have_acc"
        android:textAppearance="@style/open_sans_font"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/don_t_have_account"
        android:textColor="@color/label_secondary_text_color"
        android:textSize="@dimen/fragment_auth_text_size_big" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_view_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:textAppearance="@style/open_sans_font"
        android:text="@string/sign_up"
        android:textColor="@color/label_text_color"
        android:textSize="@dimen/fragment_auth_text_size_big"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>